--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "web": "webpack serve --mode development",
+    "web:build": "webpack --mode production",
     "test": "jest",
     "lint": "eslint .",
     "clean": "cd android && ./gradlew clean && cd .. && cd ios && xcodebuild clean && cd .."
@@ -17,6 +19,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "react": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.73.2",
     "react-native-audio-api": "^0.3.0",
     "react-native-chart-kit": "^6.12.0",
@@ -27,6 +30,7 @@
     "react-native-sound": "^0.11.2",
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3",
+    "react-native-web": "^0.21.2",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -41,11 +45,19 @@
     "@types/react-native": "^0.73.0",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/uuid": "^9.0.7",
+    "babel-loader": "^10.0.0",
     "babel-plugin-module-resolver": "^5.0.2",
+    "babel-plugin-react-native-web": "^0.21.2",
     "eslint": "^8.56.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.5",
     "jest": "^29.7.0",
     "prettier": "^3.2.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.104.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.3"
   },
   "engines": {
     "node": ">=18"
