--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "commonjs",
-    "lib": ["es2019"],
+    "lib": ["es2019", "dom"],
     "allowJs": true,
     "jsx": "react-native",
     "noEmit": true,
