--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "clean": "cd android && ./gradlew clean && cd .. && cd ios && xcodebuild clean && cd .."
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.967.0",
+    "@aws-sdk/lib-storage": "^3.967.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/slider": "^4.5.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
