--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "html-webpack-plugin": "^5.6.5",
     "jest": "^29.7.0",
     "prettier": "^3.2.2",
+    "react-native-dotenv": "^3.4.11",
     "typescript": "^5.3.3",
     "url-loader": "^4.1.1",
     "webpack": "^5.104.1",
