--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-loader": "^10.0.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-react-native-web": "^0.21.2",
+    "dotenv": "^17.3.1",
     "eslint": "^8.56.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.5",
